<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">食惠</string>
    <string name="action_settings">Settings</string>

    <!-- left_menu用到的文字 -->
    <string name="setting">设置</string>
    <string name="login_and_register">登陆/注册</string>
    <string name="home">首页</string>
    <string name="my_order">我的订单</string>
    <string name="my_coupon">我的优惠券</string>
    <string name="my_favor">我的收藏</string>
    <string name="my_intergral">我的积分</string>
    <string name="my_account">我的账户</string>
    <string name="my_accounts">详情页</string>
    <string name="my_accoun">分享</string>
    <string name="logout">用户注销</string>
    <string name="comments_reply">回复</string>

    <!-- right_ content用到的文字 -->
    <string name="ximen">厦门</string>
    <string name="swich_city">[切换城市]</string>
    <string name="coupon_info">优惠信息</string>
    <string name="coupon_info_left">团购信息</string>
    <string name="dish_recommend">菜品推荐</string>
    <string name="res_recommend">餐厅推荐</string>
    <string name="search_hint">请输入菜品/餐厅/区域进行搜索</string>

    <!-- 人气 最新 价格 销量 -->
    <string name="sort1">人气</string>
    <string name="sort2">最新</string>
    <string name="sort3">价格</string>
    <string name="sort4">销量</string>

    <!-- 我的收藏详情页 -->
    <string name="dish_coll">菜品收藏</string>
    <string name="res_coll">餐厅收藏</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="loading">加载中...</string>
    <string name="error_network_available">网络连接失败了  亲~~</string>
    <string name="coupon_info_mark">优惠信息:</string>
    <string name="promotions">活动期间:</string>
    <string name="ca">取消</string>

    <!-- 我的账户详情页 -->
    <string name="recharge">充 值</string>
    <string name="get_money">提 现</string>
    <string name="name">"姓名:"</string>
    <string name="yuan">"   元"</string>
    <string name="overage">余额:</string>
    <string name="money">充值金额:</string>
    <string name="get_the_money">"提现金额:"</string>
    <string name="select_bank">选择银行:</string>
    <string name="bank_card">"卡号:"</string>
    <string name="submit_recharge">确认充值</string>
    <string name="submit_get_cash">确认提现</string>
    <string name="alipay_recharge">支付宝充值</string>
    <string name="bank_recharge">银行卡充值</string>
    <string name="alipay_get_cash">支付宝提现</string>
    <string name="bank_get_cash">银行卡提现</string>
    <string name="alipay_account">支付宝账号:</string>
    <string name="alipay_password">密码:</string>
    <string name="alipay_pay_password">支付密码:</string>
    <string name="account_province">账户所在省:</string>
    <string name="account_city">账户所在城市:</string>
    <string name="account_city_area">账户所在区县:</string>
    <string name="account_station">开户网点:</string>

    <!-- 我的积分详情页 -->
    <string name="use_history">使用记录</string>
    <string name="can_use_credit">可用积分抵</string>

    <!-- 设置详情页 -->
    <string name="account_sec">账户安全</string>
    <string name="introduce_function">功能介绍</string>
    <string name="question">"问题:  "</string>
    <string name="answer">"答案:  "</string>
    <string name="submit">确认</string>
    <string name="set_second_psswd">设置支付密码</string>
    <string name="submit_passwd">确认密码:</string>

    <!-- coupon list item布局 -->
    <string name="time">活动期间:</string>
    <string name="shop">活动店面:</string>
    <string name="news">优惠信息:</string>
    <string name="note">注意:</string>
    <string name="other_info">其它详情:</string>
    <string name="summary">简介:</string>
    <string name="special_dish">特色菜:</string>

    <!-- user info页面 -->
    <string name="person_info">个人信息</string>
    <string name="change_head_portrait">修改头像</string>
    <string name="pet_name">昵称:</string>
    <string name="save">保存</string>
    <string name="camera">相机</string>
    <string name="from_phone">从手机相册选择</string>

    <!-- 搜索页面 -->

    <string name="search_zone">区域</string>
    <string name="search_dish">菜系</string>
    <string name="search_brand">品牌</string>
    <string name="coupon_name">优惠券</string>
    <string name="first">第一个</string>
    <string name="second">第二个</string>
    <string name="third">第三个</string>
    <string name="fouth">第四个</string>
    <string name="showdetail">showdetail</string>
    <string name="regiest_nickname">昵 称</string>
    <string name="regiest_username"> 手 机 号</string>
    <string name="regiest_password">密 码</string>
    <string name="regiest_passwords">再 次 输 入 密 码</string>
    <string name="regiest_alert">点击确认代表你已经同意美食聚惠的</string>
    <string name="login_user_name">手机号</string>
    <string name="login_user_password">密码</string>
    <string name="my_near">周边</string>
    <!-- 第三方登陆 -->
    <string name="userid_found">正在跳转登录操作…</string>
    <string name="logining">使用%s帐号登录中…</string>
    <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_error">授权操作遇到错误</string>
    <string name="auth_complete">授权成功，正在跳转登录操作…</string>

</resources>