<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone" >

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="222dp"
        android:orientation="vertical" >
<!-- checked=“true” 默认选中-->
        <RadioButton
            android:layout_width="42dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/sort_select"
            android:button="@null"
            android:gravity="center"
            android:textSize="15sp"
            android:text="@string/sort1"
            android:textColor="@color/sort_text_color" />

        <RadioButton
            android:layout_width="42dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/sort_select"
            android:button="@null"
            android:gravity="center"
            android:textSize="15sp"
            android:text="@string/sort2"
            android:textColor="@color/sort_text_color" />

        <RadioButton
            android:layout_width="42dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/sort_select"
            android:button="@null"
            android:gravity="center"
            android:textSize="15sp"
            android:text="@string/sort3"
            android:textColor="@color/sort_text_color" />

        <RadioButton
            android:layout_width="42dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/sort_select"
            android:button="@null"
            android:gravity="center"
            android:textSize="15sp"
            android:text="@string/sort4"
            android:textColor="@color/sort_text_color" />
    </RadioGroup>

</LinearLayout>