<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include layout="@layout/login_title"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:background="@color/myaccount_color"
        android:orientation="horizontal">
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="48dp"
            android:orientation="vertical">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/myaccount_text_dark"
                android:textSize="15sp"
                android:text="@string/recharge"
                />
            <TextView 
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="2dp"
                android:background="@color/myaccount_text_dark"
                
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="52dp"
            android:orientation="vertical">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/myaccount_text_dark"
                android:textSize="15sp"
                android:text="@string/get_money"
                />
            <TextView 
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="2dp"
                android:background="@color/myaccount_text_dark"
                android:visibility="invisible"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="52dp"
            android:orientation="horizontal">
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/myaccount_text_light"
                android:textSize="15sp"
                android:text="@string/overage"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/myaccount_text_light"
                android:textSize="15sp"
                android:text="  359元"/>
            
        </LinearLayout>
        
    </LinearLayout>
    <FrameLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="35dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView 
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textColor="@color/myaccount_text_dark"
                    android:textSize="15sp"
                    android:text="@string/money"/>
                 <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:maxLines="1"
                    android:minEms="3"
                    android:background="@drawable/myaccount_text_shap"
                    android:textColor="@color/myaccount_text_dark"
                    android:textSize="15sp"
                    android:hint="0"
                    />
                 <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColor="@color/myaccount_text_dark"
                    android:textSize="15sp"
                    android:text="@string/yuan"/>
            </LinearLayout>
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <TextView 
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="right"
                    android:textColor="@color/myaccount_text_dark"
                    android:textSize="15sp"
                    android:text="@string/select_bank"/>
                
                 <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:minWidth="205dp"
                    android:textColor="@color/myaccount_text_dark"
                    android:textSize="15sp"
                    android:entries="@array/bank"/>
                     
            </LinearLayout> 
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <TextView 
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textColor="@color/myaccount_text_dark"
                    android:textSize="15sp"
                    android:text="@string/bank_card"/>
                 <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:maxLines="1"
                    android:minEms="11"
                    android:background="@drawable/myaccount_text_shap"
                    android:textColor="@color/myaccount_text_dark"
                    android:textSize="15sp"
                    android:hint="请输入您的银行卡号"
                    />
                
            </LinearLayout>
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">
                 <Button 
                     android:layout_width="80dp"
                     android:layout_height="35dp"
                     android:layout_gravity="center_horizontal"
                     android:text="@string/submit_recharge"
                     android:textColor="@color/myaccount_text_light"
                     android:textSize="15sp"
                     android:background="@color/myaccount_color"/>
            </LinearLayout>
        </LinearLayout>        
    </FrameLayout>
    

</LinearLayout>
