<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/login_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/myseting_tv1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/mycredit_back_select"
            android:gravity="center"
            android:text="@string/account_sec"
            android:textColor="@color/mycoupon_item"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/myseting_tv2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/mycoupon_textback"
            android:gravity="center"
            android:text="@string/introduce_function"
            android:textColor="@color/mycoupon_item"
            android:textSize="14sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/myseting_lv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/question"
                    android:textColor="@color/myaccount_text_dark"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/myset_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/myaccount_text_shap"
                    android:hint="你的居住地在哪里"
                    android:maxLines="1"
                    android:minEms="11"
                    android:focusable="true"  
  				    android:focusableInTouchMode="true"
                    android:textColor="@color/myaccount_text_dark"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/answer"
                    android:textColor="@color/myaccount_text_dark"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/myset_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/myaccount_text_shap"
                    android:hint="厦门湖里区"
                    android:maxLines="1"
                    android:minEms="11"
                    android:focusable="true"  
   					android:focusableInTouchMode="true"
                    android:textColor="@color/myaccount_text_dark"
                    android:textSize="15sp" />
            </LinearLayout>

            <Button
                android:id="@+id/myset_button"
                android:layout_width="90dp"
                android:layout_height="26dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="13dp"
                android:background="@color/mycoupon_textback"
                android:text="@string/submit"
                android:textColor="@color/mycoupon_item"
                android:textSize="13sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/myseting_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/help"
            android:visibility="invisible" />
    </FrameLayout>

</LinearLayout>